--- a/app/src/main/res/layout/testing.xml
+++ b/app/src/main/res/layout/testing.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
+    <!--wenz11 changes-->
     <Button
         android:id="@+id/log_out"
         android:layout_width="386dp"
