--- a/app/src/main/res/layout/testing.xml
+++ b/app/src/main/res/layout/testing.xml
@@ -14,6 +14,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="#FF5722"
+        android:background="#8BC34A"
         android:text="@string/log_out" />
 </LinearLayout>
