--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <!--Added sign out in overflow menu by wenz11-->
+    <item
+        android:id="@+id/action_sign_out"
+        android:orderInCategory="110"
+        android:title="@string/sign_out"
+        app:showAsAction="never"/>
 </menu>
