--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#1564BF</color>
     <color name="colorPrimaryDark">#003B8E</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#003B8E</color>
+
+    <!--darker shade for cancel button ripple effect-->
+    <color name="colorCancelRipple">#D14712</color>
 </resources>
