--- a/app/src/main/res/layout/job_row_data.xml
+++ b/app/src/main/res/layout/job_row_data.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:isScrollContainer="true"
     android:orientation="vertical"
-    android:scrollbarStyle="insideOverlay">
+>
 
     <RelativeLayout
         android:id="@+id/jobListViewData"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:isScrollContainer="true"
         android:padding="10dp"
-        android:verticalScrollbarPosition="defaultPosition">
+>
 
 
         <TextView
             android:id="@+id/companyName"
-            android:layout_width="339dp"
-            android:layout_height="49dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="42dp"
+            android:layout_width="239dp"
+            android:layout_height="wrap_content"
             android:text="@string/job"
             android:textSize="24sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/jobSmallDescription"
-            android:layout_width="380dp"
-            android:layout_height="42dp"
+            android:layout_width="249dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/companyName"
             android:layout_alignEnd="@+id/companyName"
             android:layout_marginTop="9dp"
-            android:layout_marginEnd="-50dp"
+            android:layout_marginEnd="-10dp"
             android:text="@string/jobSmallDesc" />
+
+        <ImageView
+            android:id="@+id/compLogo"
+            android:layout_width="83dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="23dp"
+            android:layout_toEndOf="@+id/companyName"
+            app:srcCompat="@drawable/common_full_open_on_phone" />
 
 
     </RelativeLayout>
