--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,16 @@
         <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
+    <!--by wenz11 to validate Login Credentials-->
+    <style name="error" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/colorCancelRipple</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <!--by wenz11 to validate Login Credentials-->
+    <style name="errorForPassword" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/colorCancelRipple</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
 </resources>
