--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,7 +33,7 @@
             <item
                 android:id="@+id/nav_setting"
                 android:icon="@drawable/ic_settings_applications_black_24dp"
-                android:title="@string/menu_settings" />
+                android:title="@string/action_settings" />
             <item
                 android:id="@+id/nav_about_us"
                 android:icon="@drawable/ic_about_us_24dp"
